# echo

./: .env.example  .gitignore  DEPLOYMENT.md  DOCS.md  MOBILE_DEV_PLAN.md  PLAN.md  PROGRESS.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_FIXES_APPLIED.md  TODO_IMPLEMENTATION.md  cf.sh  chara_metadata.txt  docker-compose.yml  extract_chara.mjs  full_char_data.json  index.html  package-lock.json  package.json  playwright.config.ts  test-cf-token.sh  test_archive.js  test_user_case.ts.bak  tsconfig.app.json  vite.config.ts  vitest.config.ts  wrangler.jsonc  【宝宝我是char啊】01版本20260315.json
.github/workflows/: android-build-api36.yml  deploy-backend.yml  deploy-pages.yml  deploy-worker.yml  deploy.yml  setup.yml
.kiro/settings/: lsp.json
android/: .gitignore
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  live2d_native.cpp  live2d_stub.cpp
e2e/: diag.test.ts  smoke.test.ts
echo-storage/: .gitignore  README.md  package-lock.json  package.json
echo-storage/cloudflare/: README.md  env.d.ts  schema.sql  worker.ts  wrangler.toml
echo-storage/node/: .env.example  README.md  package-lock.json  package.json  server.js
playwright-report/: index.html
public/: _redirects  manifest.webmanifest
scripts/: seed-tweets-console.js  seed-tweets.js
server/cf/: env.d.ts  worker.ts
server/node/: server.js
src/: App.backup.tsx  App.diagnostic_backup.tsx  App.tsx  main.tsx  version.ts
src/__tests__/: factories.ts
src/components/: AppShell.tsx  AppsSheet.tsx  ArchiveScreen.tsx  (+30 more)
test-results/: .last-run.json
www/: index.html  sw.js
(+196 files in other folders)
